[gd_scene load_steps=57 format=3 uid="uid://dxgifdcjusnsw"]

[ext_resource type="Texture2D" uid="uid://ds2peet61iw4y" path="res://assets/Character/player/run/1.png" id="1_1p332"]
[ext_resource type="Script" path="res://script/lobby.gd" id="1_6swpo"]
[ext_resource type="Texture2D" uid="uid://drcikcw1rc8g8" path="res://assets/Character/player/run/2.png" id="1_eh07c"]
[ext_resource type="FontFile" uid="uid://dvp34o3ac2qp" path="res://assets/font/PixelOperator8-Bold.ttf" id="2_wbss7"]
[ext_resource type="Texture2D" uid="uid://calriu3i6ekgm" path="res://assets/Character/player/run/3.png" id="3_tlhtw"]
[ext_resource type="FontFile" uid="uid://hi4lslrnneyq" path="res://assets/font/PixelOperator8.ttf" id="3_u51pa"]
[ext_resource type="Texture2D" uid="uid://qfodfvvrcshy" path="res://assets/Character/player/run/4.png" id="4_iikxf"]
[ext_resource type="Texture2D" uid="uid://bjuogpear74x3" path="res://assets/tileset/Lobby-bg.jpg" id="4_n2wc5"]
[ext_resource type="Texture2D" uid="uid://dpk1o8t7k8wed" path="res://assets/Collection/platforms.png" id="5_igjtd"]
[ext_resource type="Texture2D" uid="uid://de42hcnhobhk5" path="res://assets/Character/player/run/5.png" id="5_v735j"]
[ext_resource type="Texture2D" uid="uid://qcoii6m1lxjc" path="res://assets/Character/player/run/6.png" id="6_wn633"]
[ext_resource type="Texture2D" uid="uid://c7mepwrlf3oyn" path="res://assets/Character/player/run/7.png" id="7_x1xga"]
[ext_resource type="Texture2D" uid="uid://tg1oqgt7xgxe" path="res://assets/Character/player/run/8.png" id="8_6l0go"]
[ext_resource type="Texture2D" uid="uid://t5lrxviny20y" path="res://assets/Character/player/run/9.png" id="9_18adu"]
[ext_resource type="Texture2D" uid="uid://cinr2xh55i037" path="res://assets/Character/player/run/10.png" id="10_lrd1a"]
[ext_resource type="Texture2D" uid="uid://seejl5pf8qxj" path="res://assets/Character/player/run/11.png" id="11_g08cq"]
[ext_resource type="Texture2D" uid="uid://cspi2iam2civm" path="res://assets/Character/player/run/12.png" id="12_53v2v"]
[ext_resource type="Texture2D" uid="uid://b88duhvy2tcg0" path="res://assets/Character/player/run/13.png" id="13_mp7u1"]
[ext_resource type="Texture2D" uid="uid://ba2ru17q3oy00" path="res://assets/Character/player/run/14.png" id="14_j8wn5"]
[ext_resource type="Script" path="res://script/play_button.gd" id="17_kurpt"]
[ext_resource type="Script" path="res://script/instruction_button.gd" id="19_mk7wq"]
[ext_resource type="Script" path="res://script/credits_button.gd" id="19_olrtq"]
[ext_resource type="AudioStream" uid="uid://kl5ye7dvq5vx" path="res://assets/music/time_for_adventure.mp3" id="21_h5lrd"]
[ext_resource type="AudioStream" uid="uid://cmb6ra5ap4suy" path="res://assets/sound/button-202966.mp3" id="22_wwjv2"]
[ext_resource type="PackedScene" uid="uid://dbepp7so6f0vp" path="res://Scenes/instruction_card.tscn" id="24_70hhl"]
[ext_resource type="PackedScene" uid="uid://h5eqx7ddwwd4" path="res://Scenes/credits_card.tscn" id="26_etoe2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dmb2m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_1p332")
}, {
"duration": 1.0,
"texture": ExtResource("1_eh07c")
}, {
"duration": 1.0,
"texture": ExtResource("3_tlhtw")
}, {
"duration": 1.0,
"texture": ExtResource("4_iikxf")
}, {
"duration": 1.0,
"texture": ExtResource("5_v735j")
}, {
"duration": 1.0,
"texture": ExtResource("6_wn633")
}, {
"duration": 1.0,
"texture": ExtResource("7_x1xga")
}, {
"duration": 1.0,
"texture": ExtResource("8_6l0go")
}, {
"duration": 1.0,
"texture": ExtResource("9_18adu")
}, {
"duration": 1.0,
"texture": ExtResource("10_lrd1a")
}, {
"duration": 1.0,
"texture": ExtResource("11_g08cq")
}, {
"duration": 1.0,
"texture": ExtResource("12_53v2v")
}, {
"duration": 1.0,
"texture": ExtResource("13_mp7u1")
}, {
"duration": 1.0,
"texture": ExtResource("14_j8wn5")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="Animation" id="Animation_eo8g1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1900, 245)]
}

[sub_resource type="Animation" id="Animation_ifk2d"]
resource_name = "ch_move"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1905, 245), Vector2(1195, 245)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y11qj"]
_data = {
"RESET": SubResource("Animation_eo8g1"),
"ch_move": SubResource("Animation_ifk2d")
}

[sub_resource type="Animation" id="Animation_ddkp3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-871, 34)]
}

[sub_resource type="Animation" id="Animation_wg367"]
resource_name = "title_move"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1.8025, 1),
"update": 0,
"values": [Vector2(-871, 34), Vector2(42, 34)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_txnge"]
_data = {
"RESET": SubResource("Animation_ddkp3"),
"title_move": SubResource("Animation_wg367")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mn4l0"]
expand_margin_left = 25.0
expand_margin_top = 10.0
expand_margin_right = 25.0
expand_margin_bottom = 10.0
shadow_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_offset = Vector2(8.5, 8.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f6bqj"]
expand_margin_left = 20.0
expand_margin_top = 8.0
expand_margin_right = 20.0
expand_margin_bottom = 8.0
shadow_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_offset = Vector2(8, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o632m"]
bg_color = Color(0.478431, 0.478431, 0.478431, 1)
expand_margin_left = 25.0
expand_margin_top = 10.0
expand_margin_right = 25.0
expand_margin_bottom = 10.0
shadow_color = Color(0, 0, 0, 1)
shadow_size = 5

[sub_resource type="InputEventKey" id="InputEventKey_4ohrc"]
keycode = 32

[sub_resource type="Shortcut" id="Shortcut_s2pcp"]
events = [SubResource("InputEventKey_4ohrc")]

[sub_resource type="Animation" id="Animation_xrb1q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(267, 883)]
}

[sub_resource type="Animation" id="Animation_htuiw"]
resource_name = "play_move"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.4),
"transitions": PackedFloat32Array(4.92458, 1),
"update": 0,
"values": [Vector2(267, 883), Vector2(267, 555)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t35po"]
_data = {
"RESET": SubResource("Animation_xrb1q"),
"play_move": SubResource("Animation_htuiw")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofgfm"]
expand_margin_left = 20.0
expand_margin_top = 8.0
expand_margin_right = 20.0
expand_margin_bottom = 8.0
shadow_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_offset = Vector2(8, 8)

[sub_resource type="Animation" id="Animation_n6f6u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(482, 883)]
}

[sub_resource type="Animation" id="Animation_iijtn"]
resource_name = "setting_move"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.4),
"transitions": PackedFloat32Array(4.92458, 1),
"update": 0,
"values": [Vector2(482, 883), Vector2(482, 555)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ichre"]
_data = {
"RESET": SubResource("Animation_n6f6u"),
"setting_move": SubResource("Animation_iijtn")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aliri"]
expand_margin_left = 20.0
expand_margin_top = 8.0
expand_margin_right = 20.0
expand_margin_bottom = 8.0
shadow_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_offset = Vector2(8, 8)

[sub_resource type="Animation" id="Animation_utywg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(777, 883)]
}

[sub_resource type="Animation" id="Animation_kjg6s"]
resource_name = "instuctions_move"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.4),
"transitions": PackedFloat32Array(4.92458, 1),
"update": 0,
"values": [Vector2(777, 883), Vector2(777, 555)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fihkx"]
_data = {
"RESET": SubResource("Animation_utywg"),
"instuctions_move": SubResource("Animation_kjg6s")
}

[sub_resource type="Animation" id="Animation_q1lrf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1835, 400)]
}

[sub_resource type="Animation" id="Animation_21gm4"]
resource_name = "platform_move"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(4.92458, 1),
"update": 0,
"values": [Vector2(1835, 430), Vector2(1210, 430)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_imk62"]
_data = {
"RESET": SubResource("Animation_q1lrf"),
"platform_move": SubResource("Animation_21gm4")
}

[sub_resource type="Animation" id="Animation_x4ahw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(380, 178)]
}

[sub_resource type="Animation" id="Animation_v1q4j"]
resource_name = "zoom_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.0980731, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.0980731, 1),
"update": 0,
"values": [Vector2(380, 178), Vector2(-193, -107)]
}

[sub_resource type="Animation" id="Animation_33snf"]
resource_name = "zoom_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.0980731, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.0980731, 1),
"update": 0,
"values": [Vector2(-193, -107), Vector2(650, 400)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p2ffv"]
_data = {
"RESET": SubResource("Animation_x4ahw"),
"zoom_in": SubResource("Animation_v1q4j"),
"zoom_out": SubResource("Animation_33snf")
}

[node name="Lobby" type="Node2D"]
script = ExtResource("1_6swpo")

[node name="Main_ch" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1900, 245)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_dmb2m")
autoplay = "default"
frame = 5
frame_progress = 0.210102
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Main_ch"]
libraries = {
"": SubResource("AnimationLibrary_y11qj")
}
autoplay = "ch_move"

[node name="Judul" type="Label" parent="."]
offset_left = -871.0
offset_top = 34.0
offset_right = -201.0
offset_bottom = 446.0
theme_override_colors/font_color = Color(1, 0.427451, 0.294118, 1)
theme_override_fonts/font = ExtResource("2_wbss7")
theme_override_font_sizes/font_size = 80
text = "Primum

Ludus

1.0 World"
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Judul"]
libraries = {
"": SubResource("AnimationLibrary_txnge")
}
autoplay = "title_move"

[node name="play_button" type="Button" parent="."]
offset_left = 267.0
offset_top = 883.0
offset_right = 332.0
offset_bottom = 914.0
scale = Vector2(1.5, 1.5)
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_u51pa")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_mn4l0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f6bqj")
theme_override_styles/normal = SubResource("StyleBoxFlat_o632m")
shortcut = SubResource("Shortcut_s2pcp")
text = "Play"
script = ExtResource("17_kurpt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="play_button"]
libraries = {
"": SubResource("AnimationLibrary_t35po")
}
autoplay = "play_move"

[node name="credits_button" type="Button" parent="."]
offset_left = 482.0
offset_top = 883.0
offset_right = 597.0
offset_bottom = 914.0
scale = Vector2(1.5, 1.5)
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_u51pa")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_mn4l0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ofgfm")
theme_override_styles/normal = SubResource("StyleBoxFlat_o632m")
text = "Credits"
script = ExtResource("19_olrtq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="credits_button"]
libraries = {
"": SubResource("AnimationLibrary_ichre")
}
autoplay = "setting_move"

[node name="instruction_button" type="Button" parent="."]
offset_left = 777.0
offset_top = 883.0
offset_right = 952.0
offset_bottom = 914.0
scale = Vector2(1.5, 1.5)
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_u51pa")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_mn4l0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aliri")
theme_override_styles/normal = SubResource("StyleBoxFlat_o632m")
text = "How to play"
script = ExtResource("19_mk7wq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="instruction_button"]
libraries = {
"": SubResource("AnimationLibrary_fihkx")
}
autoplay = "instuctions_move"

[node name="Lobby-bg" type="Sprite2D" parent="."]
modulate = Color(0.28485, 0.28485, 0.28485, 1)
z_index = -4096
position = Vector2(475, 364)
scale = Vector2(1.52644, 1.52644)
texture = ExtResource("4_n2wc5")

[node name="Platforms" type="Sprite2D" parent="."]
z_index = -5
position = Vector2(1835, 400)
scale = Vector2(11.8, 6.5)
texture = ExtResource("5_igjtd")
region_enabled = true
region_rect = Rect2(16, 0, 33, 9)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platforms"]
libraries = {
"": SubResource("AnimationLibrary_imk62")
}
autoplay = "platform_move"

[node name="Lobby_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("21_h5lrd")
autoplay = true

[node name="button_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("22_wwjv2")
bus = &"SFX"

[node name="instruction_card" parent="." instance=ExtResource("24_70hhl")]
visible = false

[node name="AnimationPlayer2" type="AnimationPlayer" parent="instruction_card"]
libraries = {
"": SubResource("AnimationLibrary_p2ffv")
}

[node name="credits_card" parent="." instance=ExtResource("26_etoe2")]
visible = false

[node name="AnimationPlayer3" type="AnimationPlayer" parent="credits_card"]
libraries = {
"": SubResource("AnimationLibrary_p2ffv")
}

[node name="version" type="Label" parent="."]
offset_left = 1239.0
offset_top = 660.0
offset_right = 1359.0
offset_bottom = 692.0
theme_override_fonts/font = ExtResource("3_u51pa")
theme_override_font_sizes/font_size = 25
text = "1.0.1"

[connection signal="pressed" from="play_button" to="play_button" method="_on_pressed"]
[connection signal="pressed" from="credits_button" to="credits_button" method="_on_pressed"]
[connection signal="pressed" from="instruction_button" to="instruction_button" method="_on_pressed"]
